# load-nexus

./: .gitignore  GEMINI.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: history.rs  lib.rs  load_tester.rs  main.rs
src/components/: ConfigurationForm.jsx  ConfigurationPage.jsx  Dashboard.jsx  HeaderStats.jsx  HistoryPage.jsx  LiveChart.jsx  OnboardingWizard.jsx  SettingsPage.jsx  Sidebar.jsx
src/utils/: curlParser.js
