[package]
name = "load-nexus"
version = "0.1.1"
description = "High-performance API load testing tool built with Rust and Tauri. Real-time metrics, P99 latencies, and a sleek, multi-threaded engine for modern developers."
authors = ["Samir Djelal"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "load_nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
futures = "0.3"
tokio-util = "0.7"
uuid = { version = "1", features = ["v4", "fast-rng"] }
base64 = "0.22.1"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

